# CADS

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
cads/: LICENSE_MODEL  README.md
cads/dataset_utils/: TPTBox.py  bodyparts_labelmaps.py  datasets_labelmap.py  postprocessing.py  postprocessing_ribs.py  preprocessing.py  rib_jxn.py  select_files.py
cads/dummyseg/: create_dummy_data.py
cads/scripts/: predict_images.py  predict_slicer.py  predict_splits.py  run_01_preprocess.py  run_02_inference.py  run_03_restore_seg.py
cads/table_plots/: compare_per_challenge.py  compare_per_structure_inout_totalseg.py  compare_per_structure_postprocessed.py  generate_table_for_reliable_GT_results.py  usz_results_analysis_with_stat_tests.py
cads/train/: train_nnUNetTrainerNoMirroringOverwriteClass.py  train_nnUNetTrainerNoMirroringOverwriteClassOversampleForeground.py
cads/utils/: IDC_download_and_2nifti.py  colormap.py  inference.py  inference_wwo_restore.py  libs.py  prepare_labels_to_original_format.py  snapshot.py  vram_profiling.py
dataset_utils/: bodyparts_labelmaps.py  datasets_labelmap.py  mappings.py  postprocessing.py  postprocessing_ribs.py  rib_jxn.py  select_files.py
dummyseg/: segment.py
omaseg/dataset_utils/: TPTBox.py  bodyparts_labelmaps.py  (+6 more)
scripts/: eval_splits.py  predict_splits.py  predict_test_splits.py
table_plots/: compare_per_challenge.py  compare_per_structure_inout_totalseg.py  compare_per_structure_postprocessed.py
train/: train_nnUNetTrainerNoMirroringOversampleImage.py  train_nnUNetTrainerNoMirroringOversampleImageOverwriteClass.py  train_nnUNetTrainerNoMirroringOverwriteClass.py  train_nnUNetTrainerNoMirroringOverwriteClassOversampleForeground.py
utils/: compute_metrics.py  count_structure_frequency.py  inference.py  libs.py  metrics.py
(+115 files in other folders)
