[project]
version = "2.0.0"
name = "cads"
requires-python = ">=3.11"
description = "Comprehensive anatomical segmentation model for 167 structures in Computed Tomography, spanning head to knee regions."
authors = [{ name = "Murong Xu", email = "murong.xu@uzh.ch" }]
license = { text = "Apache 2.0" }
urls = { Repository = "https://github.com/murong-xu/CADS" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
    "torch>=2.1.2,<2.11, !=2.9",
    "numpy<2.0.0",
    "scipy<1.14",
    "SimpleITK",
    "nibabel>=2.3.0",
    "tqdm>=4.45.0",
    "p_tqdm",
    "xvfbwrapper",
    "requests==2.27.1; python_version < '3.10'",
    "requests; python_version >= '3.10'",
    "psutil",
    "TPTBox==0.3.0",
    "acvl_utils>=0.2,<0.3; python_version != '3.9'",
    "nnunetv2==2.5.2",                               # temporary workaround for nnUNetv2 issue
]

[tool.pixi.dependencies]
python = ">=3.12.0,<3.13.0"
packaging = ">=25.0,<26"
pip = ">=25.2,<26"

[project.optional-dependencies]
api = ["pydantic>=2.12.0,<3.0"]

[project.scripts]
CADSSlicer = "cads.scripts.predict_slicer:main"

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true


[tool.pixi.workspace]
channels = ["conda-forge", "main", "r", "msys2"]
platforms = ["linux-64", "win-64"]

[tool.pixi.environments]
default = { features = ["self"] }


[tool.pixi.feature.self.pypi-dependencies]
cads = { path = ".", editable = true }
